# asteroid_prospecting_atlas

./: .gitignore  CLAUDE.md  Procfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  qa.yml
commit_reverts/: revert_cbdfef7fa0745c40f05e8fe763abced0ce5e488a.md
docs/: architecture.md  glossary.md  overview.md  scoring.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: hover-highlight.spec.ts  orbit-visibility.spec.ts  planet-visibility.spec.ts
frontend/src/: App.tsx  index.css  spacekit.d.ts  types.ts
scripts/: seed_db.py
src/: streamlit_app.py
tests/analytics/: test_accessibility.py  test_accessible_asteroid_queries.py  test_accessible_earth_crossing_queries.py  test_asteroid_classification_query,py  test_asteroid_metrics_query.py  test_asteroid_queries.py  test_asteroid_visualization_query.py  test_delta.py  test_earth_crossing_queries.py  test_launch_window.py  test_mission_cost.py  test_mission_roi.py  test_orbit_geometry.py  test_orbital_classification.py  test_orbital_metrics.py  test_prospectable_earth_crossing_queries.py  test_prospecting.py  test_resource_profile.py
tests/api/: test_accessible_asteroids_endpoint.py  test_deploy_config.py  test_ping.py  test_session.py
tests/db/: test_asteroid_model.py  test_asteroid_orbit_model.py  test_asteroid_orbit_orm.py  test_asteroid_orm.py  test_init_db.py
tests/ingest/: test_jpl_asteroids.py  test_models.py  (+16 more)
(+61 files in other folders)
