[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asteroid-prospecting-atlas"
version = "0.1.0"
description = "A platform for ingesting, scoring, and exposing asteroid prospecting data."
readme = "README.md"
requires-python = ">=3.11"

authors = [
{ name = "Matthew Giguere" }
]

dependencies = [
"fastapi>=0.115,<1.0",
"uvicorn[standard]>=0.30,<1.0",
"pydantic>=2.8,<3.0",
"pydantic-settings>=2.4,<3.0",
"sqlalchemy>=2.0,<3.0",
"psycopg[binary]>=3.2,<4.0",
"pandas>=2.2,<3.0",
"numpy>=2.0,<3.0",
"astropy>=6.1,<7.0"
]

[project.optional-dependencies]
dev = [
"pytest>=8.3,<9.0",
"pytest-cov>=5.0,<6.0",
"httpx>=0.27,<1.0",
"ruff>=0.6,<1.0",
"pip-audit>=2.7,<3.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=asteroid_atlas --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
